{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 13,
  "lineage": "06537eba-984d-bd9f-190a-3a3837ca1a9f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prime-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:internet-gateway/igw-017ec11523cc4c260",
            "id": "igw-017ec11523cc4c260",
            "owner_id": "652882955611",
            "tags": {
              "Name": "prime-igw"
            },
            "tags_all": {
              "Name": "prime-igw"
            },
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prime-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:route-table/rtb-01de3774dd0bd1284",
            "id": "rtb-01de3774dd0bd1284",
            "owner_id": "652882955611",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017ec11523cc4c260",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prime-pub-route-table"
            },
            "tags_all": {
              "Name": "prime-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:route-table/rtb-0cf568c194bc35a43",
            "id": "rtb-0cf568c194bc35a43",
            "owner_id": "652882955611",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prime-private-route-table"
            },
            "tags_all": {
              "Name": "prime-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c336ac26212ee1f2",
            "route_table_id": "rtb-0cf568c194bc35a43",
            "subnet_id": "subnet-0631d28b2b69d7039"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9fd2dd78ec3ebfb",
            "route_table_id": "rtb-0cf568c194bc35a43",
            "subnet_id": "subnet-0462ba3d21cf2f03a"
          },
          "dependencies": [
            "aws_route_table.private-route_table",
            "aws_subnet.prime-private2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00103b33ef74a0ff8",
            "route_table_id": "rtb-01de3774dd0bd1284",
            "subnet_id": "subnet-0b64d6cf900d52b48"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub1",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e682b18f76e404af",
            "route_table_id": "rtb-01de3774dd0bd1284",
            "subnet_id": "subnet-0f69c7ad5dc4959db"
          },
          "dependencies": [
            "aws_internet_gateway.prime-igw",
            "aws_route_table.prime-pub-route-table",
            "aws_subnet.prime-pub2",
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:subnet/subnet-0631d28b2b69d7039",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0631d28b2b69d7039",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652882955611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private1"
            },
            "tags_all": {
              "Name": "prime-private1"
            },
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:subnet/subnet-0462ba3d21cf2f03a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0462ba3d21cf2f03a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652882955611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-private2"
            },
            "tags_all": {
              "Name": "prime-private2"
            },
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:subnet/subnet-0b64d6cf900d52b48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64d6cf900d52b48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652882955611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub1"
            },
            "tags_all": {
              "Name": "prime-pub1"
            },
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prime-pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:subnet/subnet-0f69c7ad5dc4959db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f69c7ad5dc4959db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "652882955611",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prime-pub2"
            },
            "tags_all": {
              "Name": "prime-pub2"
            },
            "vpc_id": "vpc-0ae78bc71300ab923"
          },
          "dependencies": [
            "aws_vpc.prime"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prime",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:652882955611:vpc/vpc-0ae78bc71300ab923",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08aa77fac9eeb919b",
            "default_route_table_id": "rtb-0647ae369fd6c9e7d",
            "default_security_group_id": "sg-0f8649e703bb3dbd5",
            "dhcp_options_id": "dopt-0cb8876111888f5ac",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae78bc71300ab923",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0647ae369fd6c9e7d",
            "owner_id": "652882955611",
            "tags": {
              "Name": "prime"
            },
            "tags_all": {
              "Name": "prime"
            }
          }
        }
      ]
    }
  ]
}